--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@capacitor/status-bar": "7.0.0",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
+    "chart.js": "^4.4.8",
     "ionicons": "^7.0.0",
     "swiper": "^11.2.4",
     "vue": "^3.3.0",
