--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
     "chart.js": "^4.4.8",
-
     "ionicons": "^7.0.0",
     "swiper": "^11.2.4",
     "vue": "^3.3.0",
@@ -29,6 +28,7 @@
   },
   "devDependencies": {
     "@capacitor/cli": "7.0.1",
+    "@types/google.maps": "^3.58.1",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
